# gifhole

./: .dockerignore  .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  INDEX.md  README.md  compose.yaml  pyproject.toml
.claude/: launch.json
.github/workflows/: check.yml  release.yml
browser/: conftest.py  run  test_browsers.py
packaging/homebrew/: gifhole.rb
scripts/: gifhole-pick  release_notes.py
src/gifhole/: __init__.py  app.py  cli.py  clipboard.py  dedupe.py  enrich.py  fetch.py  frames.py  jobs.py  logbus.py  ocr.py  store.py
src/gifhole/static/: app.js  index.html  style.css
tests/: conftest.py  test_api.py  test_contracts.py  test_fetch.py  test_logbus.py  test_metadata.py  test_store.py
